# multihypothesis

./: .gitignore  CMakeLists.txt  ME.cpp  README.md  TODO  bitstream.cpp  bitstream.h  bowing.cfg  calculations.cpp  calculations.h  cavlc.cpp  cavlc.h  cavlcDec.cpp  cavlcDec.h  cavlcEnc.cpp  cavlcEnc.h  chroma_test.cpp  codec.cpp  codec.h  config.h.in  corrModel.cpp  corrModel.h  dec_main.cpp  decoder.cpp  decoder.h  defs.h  enc_main.cpp  encoder.cpp  encoder.h  frameBuffer.cpp  frameBuffer.h  ldpca.h  lowpass.cpp  obmc.cpp  obme.cpp  obme.h  resampling.cpp  sideInformation.cpp  sideInformation.h  sideInformation_MCI.cpp  (+5 more)
b/: CMakeCache.txt  Makefile  cmake_install.cmake  obme
jm/: data.txt  leakybucketparam.cfg  test.264
python_analysis/: openDVC_SI_gop4.txt  openDVC_SI_gop8.txt  proposed_SI_gop2.txt  visualize_SI_PSNR.py
